# emblate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Emblate/: Algorithms  Data  Emblate
Emblate/src/Algorithms/: Compare.h  Interpolate.h  Math.h  Search.h
Emblate/src/Data/: Defines.h  Exception.h  List.h  Queue.h  Stack.h  Tuple.h  Vector.h
doc/: Doxyfile
src/: Algorithm  Algorithms  Algorithms.h  Container  Core  Data  Data.h  Emblate
src/Algorithms/: Interpolate.h  Math.h  Sort.h  Utils.h
src/Data/: List.h  Queue.h  Stack.h  Vector.h
src/Internal/Algorithm/: Interpolate.h  Math.h  Search.h  Sort.h  Utils.h
src/Internal/Algorithms/: Interpolate.h  Math.h  Search.h  Sort.h  Utils.h
src/Internal/Container/: Defines.h  List.h  Queue.h  Stack.h  Vector.h
src/Internal/Core/: Exception.h
src/Internal/Data/: List.h  Queue.h  Stack.h  Tuple.h  Vector.h
tests/Algorithm/: test_interpolate.cpp  test_math.cpp  test_search.cpp  test_sort.cpp  test_utils.cpp
tests/Algorithms/: test_interpolate.cpp  test_math.cpp  test_search.cpp  test_sort.cpp  test_utils.cpp
tests/Container/: test_queue.cpp  test_vector.cpp
tests/Data/: test_list.cpp  test_queue.cpp  test_stack.cpp  test_vector.cpp
